--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
       		"html": false,
       		"css": false,
       		"SQL": false
-      	}
+      	},
+        "chat.agent.enabled": false
       },
       "extensions": [
         "McCarter.start-git-bash",
