--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.fontSize": 18,
+  "extensions.ignoreRecommendations": true,
+  "unwantedRecommendations": ["ms-python.vscode-python-envs"],
   "terminal.integrated.defaultProfile.windows": "Git Bash",
   "window.restoreWindows": "preserve",
   "workbench.editorAssociations": {
@@ -15,6 +17,6 @@
     "html": false,
     "css": false,
     "SQL": false
-   },
-   "chat.agent.enabled": false
+  },
+  "chat.agent.enabled": false
 }
