--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,14 @@
   "editor.formatOnSave": true,
   "editor.fontSize": 18,
   "extensions.ignoreRecommendations": true,
-  "unwantedRecommendations": ["ms-python.vscode-python-envs"],
   "terminal.integrated.defaultProfile.windows": "Git Bash",
   "window.restoreWindows": "preserve",
   "workbench.editorAssociations": {
     "*.md": "vscode.markdown.preview.editor"
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[python]": {
+  "editor.defaultFormatter": "ms-python.black-formatter"
   },
   "workbench.colorTheme": "Default Dark+",
   "workbench.iconTheme": "vscode-icons",
