--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "ms-python.black-formatter",
     "McCarter.start-git-bash",
     "ms-python.python",
     "esbenp.prettier-vscode",
