--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,15 @@
 {
   "name": "Python Flask Development Container",
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm",
   "features": {
-    "ghcr.io/devcontainers/features/python:1": {
-      "version": "latest"
-    },
-    "ghcr.io/devcontainers/features/github-cli:1": {}
+    "ghcr.io/devcontainers/features/python:1": {}
   },
   "hostRequirements": {
     "cpus": 4
   },
   "waitFor": "onCreateCommand",
-  "updateContentCommand": "pip install -r requirements.txt",
-  "postCreateCommand": "",  // You can add setup scripts here if needed
+  "updateContentCommand": "",
+  "postCreateCommand": "pip install -r requirements.txt && apt-get clean && rm -rf /root/.cache/pip",
   "postStartCommand": "",   // For commands to run each Codespace start
   "customizations": {
     "vscode": {
@@ -39,19 +36,24 @@
         "chat.agent.enabled": false
       },
       "extensions": [
-        "ms-python.black-formatter",
-        "McCarter.start-git-bash",
-        "ms-python.python",
-        "esbenp.prettier-vscode",
-        "oderwat.indent-rainbow",
-        "tomoki1207.pdf",
-        "GitHub.codespaces",
-        "ms-python.debugpy",
-        "yahyabatulu.vscode-markdown-alert",
+        "bierner.markdown-mermaid",
         "bierner.markdown-preview-github-styles",
+        "esbenp.prettier-vscode",
+        "GitHub.codespaces",
+        "mathematic.vscode-pdf",
+        "McCarter.start-git-bash",
         "mechatroner.rainbow-csv",
+        "ms-python.black-formatter",
+        "ms-python.debugpy",
         "ms-python.pylint",
-        "bierner.markdown-mermaid"
+        "ms-python.python",
+        "oderwat.indent-rainbow",
+        "yahyabatulu.vscode-markdown-alert",
+        "oderwat.indent-rainbow",
+        "streetsidesoftware.code-spell-checker",
+        "tal7aouy.icons",
+        "yahyabatulu.vscode-markdown-alert",
+        "yy0931.vscode-sqlite3-editor"       
       ]
     }
   },
