--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,18 +1,23 @@
 {
   "recommendations": [
-    "ms-python.black-formatter",
-    "McCarter.start-git-bash",
-    "ms-python.python",
-    "esbenp.prettier-vscode",
-    "oderwat.indent-rainbow",
-    "tomoki1207.pdf",
-    "GitHub.codespaces",
-    "ms-python.debugpy",
-    "yahyabatulu.vscode-markdown-alert",
-    "bierner.markdown-preview-github-styles",
-    "mechatroner.rainbow-csv",
-    "ms-python.pylint",
-    "bierner.markdown-mermaid",
-    "ms-python.vscode-python-envs"
+        "bierner.markdown-mermaid",
+        "bierner.markdown-preview-github-styles",
+        "esbenp.prettier-vscode",
+        "GitHub.codespaces",
+        "mathematic.vscode-pdf",
+        "McCarter.start-git-bash",
+        "mechatroner.rainbow-csv",
+        "ms-python.black-formatter",
+        "ms-python.debugpy",
+        "ms-python.pylint",
+        "ms-python.python",
+        "ms-python.vscode-python-envs",
+        "oderwat.indent-rainbow",
+        "yahyabatulu.vscode-markdown-alert",
+        "oderwat.indent-rainbow",
+        "streetsidesoftware.code-spell-checker",
+        "tal7aouy.icons",
+        "yahyabatulu.vscode-markdown-alert",
+        "yy0931.vscode-sqlite3-editor"
   ]
 }
